feat(job): add claim/ack drain to the buffered job logger
Replaces the CopyOnWriteArrayList buffer with an ArrayDeque under a
monitor, and adds a package-private claim/ack/nack protocol so a flusher
running on a different Vert.x context can take batches safely — handler
service verticles may run on WORKER threads, so the appender and the
drain are genuinely concurrent.

CopyOnWriteArrayList was wrong on three counts: it copies the whole
backing array per append (quadratic for a chatty job), a cursor over an
append-only list can never reclaim memory, and subList throws
ConcurrentModificationException when the backing array changes mid-drain.

Delivery is at-least-once on known failure: nack returns the batch to the
front of the deque, ahead of newer entries, so a transient write failure
does not silently drop log lines.

entries() now returns a defensive copy of what is still buffered rather
than a live view; the JobLogger javadoc is corrected accordingly — it
promised flushing "after the job completes" and called these records an
audit trail, which overclaims against the separate audit module.