@@ -4,40 +4,84 @@
 package dev.vertique.job;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import java.util.List;
-import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * Thread-safe in-memory implementation of {@link JobLogger}.
  *
- * <p>Entries are appended to a {@link CopyOnWriteArrayList} which provides safe concurrent
- * writes without explicit synchronisation and stable snapshot reads.
+ * <p>Entries are buffered in an {@link ArrayDeque} guarded by a private monitor. Cross-thread
+ * safety is required rather than optional: the periodic flusher drains the buffer from a different
+ * Vert.x context than the handler that appends to it, because handler service verticles may run on
+ * WORKER threads.
+ *
+ * <p>A {@link java.util.concurrent.CopyOnWriteArrayList} is deliberately <em>not</em> used here:
+ *
+ * <ul>
+ *   <li>it copies the whole backing array on every append, which is O(N&sup2;) for a chatty job;
+ *   <li>a read cursor over it can never remove anything, so the buffer would grow unboundedly for
+ *       the life of the execution;
+ *   <li>its {@code subList} throws {@link java.util.ConcurrentModificationException} when the
+ *       backing array changes mid-read, which makes it unusable for a batch drain.
+ * </ul>
+ *
+ * <p>The deque plus removal on {@link #ack()} avoids all three.
  *
  * <p>Instances are created per execution by {@link DefaultJobContext}.
  */
 public class DefaultJobLogger implements JobLogger {
 
-    private final CopyOnWriteArrayList<LogEntry> buffer = new CopyOnWriteArrayList<>();
+    /** Guards {@link #buffer} and {@link #inFlightBatch}. */
+    private final Object lock = new Object();
+
+    private final Deque<LogEntry> buffer = new ArrayDeque<>();
+
+    /**
+     * The batch handed out by the last successful {@link #claim()}, or {@code null} when no flush is
+     * in flight. A non-{@code null} value is the in-flight marker: it is set only by a claim that
+     * drained at least one entry, and cleared by {@link #ack()} or {@link #nack(List)}.
+     */
+    private List<LogEntry> inFlightBatch;
 
     @Override
     public void info(String message) {
-        buffer.add(new LogEntry("INFO", message, Instant.now()));
+        append(new LogEntry("INFO", message, Instant.now()));
     }
 
     @Override
     public void warn(String message) {
-        buffer.add(new LogEntry("WARN", message, Instant.now()));
+        append(new LogEntry("WARN", message, Instant.now()));
     }
 
     @Override
     public void error(String message) {
-        buffer.add(new LogEntry("ERROR", message, Instant.now()));
+        append(new LogEntry("ERROR", message, Instant.now()));
     }
 
+    /**
+     * Appends one entry to the tail of the buffer under the lock.
+     *
+     * @param entry the entry to buffer
+     */
+    private void append(LogEntry entry) {
+        synchronized (lock) {
+            buffer.addLast(entry);
+        }
+    }
+
+    /**
+     * Returns a defensive copy of the entries <em>still buffered</em>. Entries already persisted by
+     * a {@link #claim()}/{@link #ack()} cycle are no longer included, so this is not a running
+     * transcript of the whole execution.
+     *
+     * @return an immutable snapshot copy of the buffered entries, in insertion order
+     */
     @Override
     public List<LogEntry> entries() {
-        return Collections.unmodifiableList(buffer);
+        synchronized (lock) {
+            return List.copyOf(buffer);
+        }
     }
 
     // --- Claim / ack drain protocol ---
@@ -50,12 +94,21 @@ public class DefaultJobLogger implements JobLogger {
      * <em>or</em> when a previously claimed batch has not yet been acknowledged via
      * {@link #ack()} or returned via {@link #nack(List)}. Claimed entries are removed from the
      * buffer so that a subsequent claim never re-delivers them; delivery becomes at-least-once
-     * only through {@link #nack(List)}.
+     * only through {@link #nack(List)}. An empty claim leaves the in-flight state untouched, so a
+     * later claim can still succeed.
      *
      * @return the claimed batch in insertion order, or an empty list when nothing can be claimed
      */
     List<LogEntry> claim() {
-        return List.of();
+        synchronized (lock) {
+            if (inFlightBatch != null || buffer.isEmpty()) {
+                return List.of();
+            }
+            List<LogEntry> batch = List.copyOf(buffer);
+            buffer.clear();
+            inFlightBatch = batch;
+            return batch;
+        }
     }
 
     /**
@@ -63,17 +116,30 @@ public class DefaultJobLogger implements JobLogger {
      * clearing the in-flight state so the next {@link #claim()} can proceed.
      */
     void ack() {
-        // Intentionally not implemented — see the claim/ack drain slice.
+        synchronized (lock) {
+            inFlightBatch = null;
+        }
     }
 
     /**
      * Returns a failed batch to the front of the buffer, ahead of any entries appended while the
      * flush was in flight, and clears the in-flight state so the next {@link #claim()} can
-     * proceed. Entries are never dropped on a known write failure.
+     * proceed. Entries are never dropped on a known write failure. The batch's own order is
+     * preserved, so the next claim yields the nacked entries first and the newer ones after them.
      *
-     * @param batch the previously claimed batch that failed to persist
+     * <p>A {@code null} or empty batch only clears the in-flight state.
+     *
+     * @param batch the previously claimed batch that failed to persist; may be {@code null}
      */
     void nack(List<LogEntry> batch) {
-        // Intentionally not implemented — see the claim/ack drain slice.
+        synchronized (lock) {
+            if (batch != null) {
+                // Push back-to-front so the batch keeps its internal order at the head of the deque.
+                for (int i = batch.size() - 1; i >= 0; i--) {
+                    buffer.addFirst(batch.get(i));
+                }
+            }
+            inFlightBatch = null;
+        }
     }
 }
